--- a/Repast.settings
+++ b/Repast.settings
@@ -12,6 +12,6 @@
     <string>SettingsRegistryId</string>
     <string>Repast.registry</string>
     <string>LastLoadedScenario</string>
-    <string>C:\Users\Sala\git\behaviorsimulator\BehaviourSimulator\BehaviourSimulator.rs</string>
+    <string>C:\Users\Daniele\git\behaviorsimulator\BehaviourSimulator.rs</string>
   </hashtable>
 </simphony.settings.SettingsRegistry>
