--- a/config/act_Sleeping.conf
+++ b/config/act_Sleeping.conf
@@ -2,7 +2,7 @@
 Effects
 -0.0033,-0.003,-0.0006,-0.009,-0.0025,-0.006,0.0,-0.0001,-0.0001
 Weights
-tirediness
+tiredness
 Weekdays
 0.03,0.03,0.03,0.03,0.03,0.03,0.03,0.03
 Weather
