--- a/config/act_9Toilet.conf
+++ b/config/act_9Toilet.conf
@@ -1,13 +1,13 @@
-10,Toileting
+9,Toilet
 Effects
 0.0,0.0,0.0,-0.1,0.0,0.0,0.0,0.0,0.0
 Weights
 Excretion
 Weekdays
-0.8,0.8,0.8,0.8,0.8,0.8,0.8
+1,1,1,1,1,1,1
 Weather
 1.0,1.0,1.0
 Theta
-0.08
+0.2
 MinDuration
-9
+5
