--- a/config/need.conf
+++ b/config/need.conf
@@ -1,9 +1,10 @@
-1,Hunger,0.0033,
-2,Stress,0.003,
+1,Hunger,0.0025,
+2,Stress,0.0006,
 3,Uncleanness,0.0006,
-4,Excretion,0.009,
-5,Tiredness,0.001,
-6,Boredom,0.006,
-7,Loneliness,0.0001,
+4,Excretion,0.006,
+5,Tiredness,0.0009,
+6,Boredom,0.0006,
+7,Loneliness,0.0006,
 8,Untidiness,0.0001,
 9,LowStock,0.0001,
+10,Duty,1,
