--- a/config/act_17RelaxW.conf
+++ b/config/act_17RelaxW.conf
@@ -1,13 +1,13 @@
-15,Relax
+17,RelaxW
 Effects
 0.0,-0.02,0.0,0.0,0.0,-0.05,0.0,0.0,0.0
 Weights
-boredom,stress,tiredness
+boredom,stress
 Weekdays
-0,0,0,0,0,1,1
+1,1,1,1,1,0,0
 Weather
 1.0,1.0,1.0
 Theta
-0.2
+RS,12:10,RE,12:40,FS,12:40,FE,13:00
 MinDuration
-50
+20
