--- a/config/act_14Reading.conf
+++ b/config/act_14Reading.conf
@@ -2,7 +2,7 @@
 Effects
 0.0,-0.001,0.0,0.0,0.0,-0.02,0.0,0.0,0.0
 Weights
-boredom,stress
+boredom,stress,tiredness
 Weekdays
 0,0,0,0,0,1,1
 Weather
