--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
 
     <property name="project-name" value="sharon"/>
     <property name="version" value="1.0"/>
+
     <!-- compiler switches -->
     <property name="debug" value="on"/>
     <property name="optimize" value="off"/>
@@ -16,6 +17,9 @@
     <property name="dir.src" location="src"/>
     <property name="dir.build" location="build"/>
     <property name="dir.docs" location="doc"/>
+
+    <!-- run parameters -->
+    <property name="num_days" value="5"/>
 
     <description>
         SHARON is a simulator of Human Activities, Routines and Needs.
@@ -54,7 +58,9 @@
     </target>
 
     <target name="run" depends="jar">
-        <java jar="Sharon_${version}.jar" fork="true"/>
+        <java jar="Sharon_${version}.jar" fork="true">
+            <arg line="${num_days}"/>
+        </java>
     </target>
 
 
