--- a/config/act_Eat.conf
+++ b/config/act_Eat.conf
@@ -1,13 +1,13 @@
-8,Toilet
+2,Eat
 Effects
-0.0,0.0,-0.0001,-0.1,0.0,0.0,0.0,0.0,0.0
+-0.03,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0
 Weights
-Excretion
+hunger
 Weekdays
 0.8,0.8,0.8,0.8,0.8,0.8,0.8
 Weather
 1.0,1.0,1.0
 Theta
-0.08
+0.1
 MinDuration
-5
+30
