--- a/configBaseSS/act_Sleeping.conf
+++ b/configBaseSS/act_Sleeping.conf
@@ -1,6 +1,6 @@
-3,Sleep
+1,Sleeping
 Effects
-0.0020,-0.003,-0.0006,-0.009,-0.003,-0.006,-0.0001,-0.0001,-0.0001
+-0.0020,-0.003,-0.0006,-0.009,-0.003,-0.006,-0.0001,-0.0001,-0.0001
 Weights
 tiredness
 Weekdays
