--- a/configBaseSS/act_Toilet.conf
+++ b/configBaseSS/act_Toilet.conf
@@ -1,6 +1,6 @@
-8,Toilet
+3,Toileting
 Effects
-0.0,0.0,-0.0001,-0.1,0.0,0.0,0.0,0.0,0.0
+0.0,0.0,0.0,-0.1,0.0,0.0,0.0,0.0,0.0
 Weights
 Excretion
 Weekdays
@@ -10,4 +10,4 @@ Weather
 Theta
 0.08
 MinDuration
-5
+9
