--- a/configAdvanced/act_4BreakfastR.conf
+++ b/configAdvanced/act_4BreakfastR.conf
@@ -1,13 +1,13 @@
-2,Eat
+4,BreakfastR
 Effects
 -0.05,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0
 Weights
 hunger
 Weekdays
-0.8,0.8,0.8,0.8,0.8,0.8,0.8
+0,0,0,0,0,1,1
 Weather
 1.0,1.0,1.0
 Theta
-0.1
+R,08:00,F,10:30
 MinDuration
-30
+5
