Upgraded config - bug in sensor area?

--- a/config/env/places.conf
+++ b/config/env/places.conf
@@ -11,10 +11,11 @@ Wardrobe,900,520
 Bathroom Cabinet,720,320
 Main Door,820,280
 Bathroom Door,500,280
-Shower Door,560,600
+Shower Door,550,550
 Hall,1000,250
 Kitchen,240,250
 Tap,720,360
 WC,720,520
 Kitchen Temperature,280,50
 Bed,100,560
+Shower,540,600
