--- a/config/patterns/patt_Shower.conf
+++ b/config/patterns/patt_Shower.conf
@@ -1,1 +1,2 @@
-8,1,8,Shower,13,0.1,14,0.8,13,0.1
+6,0.9615,61,Shower_1,1,0.05,14,0.1,21,0.8,14,0.5
+6,0.0385,62,Shower_2_preheat,14,0.05,1,0.05,14,0.1,21,0.75,14,0.5
