Configuration adapted to fit ScaleModel

--- a/config/env/sensors.conf
+++ b/config/env/sensors.conf
@@ -1,20 +1,20 @@
-Wardrobe,420,620
-Couch,1100,620
-TV receiver,1150,40
-Couch,1300,580
-Couch,1320,450
-Chair,1200,380
-Chair,1140,440
-Fridge,420,60
-Drawer,220,40
-Wardrobe,900,520
-Bathroom Cabinet,720,320
-Main Door,820,280
-Bathroom Door,500,280,455,280,720,620,1
-Shower Door,560,560,520,520,640,560,1
-Hall,1000,280,280,40,1000,280,1
-Kitchen,240,280,100,40,280,280,0.8
-Tap,720,360
-WC,720,520
-Kitchen Temperature,280,40,100,40,280,280,1
-Bed,100,560
+PirCucina,800,420,596,320,1000,520,1
+PirCamera,800,135,596,5,1000,315,1
+PirLiving,200,370,5,210,420,520,1
+PirCorridor,505,270,425,5,590,500,1
+PirBathroom,210,100,5,5,420,200,1
+CorridorLight,505,270,0,0
+CorridorTemp,505,270,0,0
+BathRoomDrugBox,270,9,230,9,315,45,0.5
+MainDoor,500,522,469,482,555,521,1
+LivingroomLampSwitch,297,245,274,247,333,284,0.2
+LivingPowerMeter,297,245,0,0
+KitchenLampSwitch,647,359,626,359,685,389,0.2
+KitchenPowerMeter,647,359,0,0
+BedroomLampSwitch,632,43,615,43,680,98,0.2
+BedroomPowerMeter,632,43,0,0
+LivingButtonLight,410,345,0,0
+KitchenButtonLight,605,347,0,0
+CommonKitchenLivingButtonLight,605,347,0,0
+CommonGateRelay,500,522,0,0
+CommonGateButton,500,522,469,482,555,521,1
