--- a/config/env/places.conf
+++ b/config/env/places.conf
@@ -1,21 +1,21 @@
-Wardrobe,420,620
-Couch,1100,620
-TV receiver,1150,50
-Couch,1300,580
-Couch,1320,450
-Chair,1200,380
-Chair,1140,440
-Fridge,420,60
-Drawer,220,40
-Wardrobe,900,520
-Bathroom Cabinet,720,320
-Main Door,820,280
-Bathroom Door,500,280
-Shower Door,550,550
-Hall,1000,250
-Kitchen,240,250
-Tap,720,360
-WC,720,520
-Kitchen Temperature,280,50
-Bed,100,560
-Shower,540,600
+Wardrobe,803,261
+Couch,79,412
+TV receiver,104,240
+Armchair,650,258
+Couch,79,412
+Chair,300,350
+Chair,232,412
+Fridge,623,491
+Drawer,730,491
+Wardrobe,803,261
+Bathroom Cabinet,266,28
+Main Door,504,506
+Bathroom Door,405,120
+Shower Door,95,168
+Hall,504,258
+Kitchen,792,412
+Tap,266,28
+WC,88,38
+Kitchen Temperature,792,412
+Bed,812,104
+Shower,95,168
